<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.12</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.vattima.lego</groupId>
	<artifactId>lego-imaging</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<name>Lego :: Imaging</name>
	<description>Lego :: Imaging with Flickr API</description>

	<properties>
		<java.version>17</java.version>
		<bricklink-data.version>1.1.0-SNAPSHOT</bricklink-data.version>
		<openfeign.version>10.12</openfeign.version>
		<lombok.version>1.18.28</lombok.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<mybatis-spring-boot-starter.version>2.1.4</mybatis-spring-boot-starter.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.bricklink.data</groupId>
			<artifactId>bricklink-data</artifactId>
			<version>${bricklink-data.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.23.Final</version>
		</dependency>

		<dependency>
			<groupId>com.github.mike10004</groupId>
			<artifactId>commons-imaging</artifactId>
			<version>1.0a1</version>
		</dependency>

		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-okhttp</artifactId>
			<version>${openfeign.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-httpclient</artifactId>
			<version>${openfeign.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-jackson</artifactId>
			<version>${openfeign.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-slf4j</artifactId>
			<version>${openfeign.version}</version>
		</dependency>

		<dependency>
			<groupId>org.imgscalr</groupId>
			<artifactId>imgscalr-lib</artifactId>
			<version>4.1</version>
		</dependency>

		<dependency>
			<groupId>com.flickr4java</groupId>
			<artifactId>flickr4java</artifactId>
			<version>3.0.1</version>
		</dependency>

		<dependency>
			<groupId>net.swisstech</groupId>
			<artifactId>bitly-api-client</artifactId>
			<version>0.8.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openrewrite.maven</groupId>
				<artifactId>rewrite-maven-plugin</artifactId>
				<version>4.46.0</version>
				<configuration>
					<activeRecipes>
						<recipe>org.openrewrite.java.spring.boot2.UpgradeSpringBoot_2_7</recipe>
						<recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
						<recipe>org.openrewrite.java.spring.boot2.SpringBoot2JUnit4to5Migration</recipe>
					</activeRecipes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-spring</artifactId>
						<version>4.36.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
